quelques ajustement